# TS

./: README.md  README.txt
Analysis/: CMakeLists.txt
Analysis/SamUtils/: BAMUtils.cpp
Analysis/TMAP/src/map/: tmap_map_driver.c
Analysis/TMAP/src/map/pairing/: tmap_map_pairing.c
Analysis/TMAP/src/map/util/: tmap_map_util.c
Analysis/Util/: OptArgs.cpp  OptArgs.h  OptionArgs.cpp  OptionArgsBase.cpp  OptionArgsBase.h  Utils.cpp  Utils.h
Analysis/VariantCaller/: BAMWalkerEngine.cpp  BAMWalkerEngine.h  HandleVariant.cpp  HandleVariant.h  LocalContext.h  OrderedVCFWriter.h  TargetsManager.cpp  TargetsManager.h  VariantCaller.cpp  freebayes
Analysis/VariantCaller/Bookkeeping/: ExtendParameters.cpp  ExtendParameters.h  InputStructures.cpp  InputStructures.h  MiscUtil.cpp  MiscUtil.h  VcfFormat.cpp  VcfFormat.h
Analysis/VariantCaller/EnsembleEval/: CrossHypotheses.cpp  CrossHypotheses.h  DiagnosticJSON.cpp  PosteriorInference.cpp  ShortStack.cpp  ShortStack.h  StackEngine.cpp  StackEngine.h
Analysis/VariantCaller/Eval/: DiagnosticJSON.cpp  DiagnosticJson.h  ShortStack.cpp  ShortStack.h  StackEngine.cpp  StackEngine.h
Analysis/VariantCaller/Evaluator/: ClassifyVariant.cpp  ClassifyVariant.h  CrossHypotheses.cpp  CrossHypotheses.h  DiagnosticJSON.cpp  DiagnosticJson.h  LocalContext.cpp  LocusData.cpp  LocusData.h  PosteriorInference.cpp  ShortStack.cpp  StackEngine.cpp  StackEngine.h  TentativeAlignment.cpp  TentativeAlignment.h
Analysis/VariantCaller/Filter/: DecisionTreeData.cpp  DecisionTreeData.h  VariantAssist.cpp  VariantAssist.h
Analysis/VariantCaller/Reads/: ExtendedReadInfo.cpp
Analysis/VariantCaller/Splice/: ClassifyVariant.cpp  ClassifyVariant.h  LocalContext.cpp  LocalContext.h  SpliceVariantHypotheses.cpp  SpliceVariantHypotheses.h
Analysis/VariantCaller/Strelka/: strelka_pos_processor.cpp  strelka_pos_processor.h
Analysis/VariantCaller/tvcutils/: split_vcf.cpp  unify_vcf.cpp
Analysis/tests/: test_analysis.py
buildTools/: BUILD.txt  TVCVersion.cpp.in  TVCVersion.env.in  TVCVersion.h.in  build.sh
buildTools/cmake/: CMakeLists.compiler.txt  CMakeLists.cpack.txt  CMakeLists.dependencies.txt  CMakeLists.version.txt
